# mathviz

./: .gitignore  README.md  pyproject.toml
notebooks/: 3d_visualization.ipynb  README.md  advanced_features.ipynb  advanced_visualization.ipynb  derivative_analysis.ipynb
src/mathviz/: __init__.py  analysis.py  main.py  plotter.py
tests/: test_basic.py
